staff and inventory rewrite
