# controllers/inventory.js
@@ -1,23 +1,48 @@
 const Product = require('../models/product');
+const Vendor = require('../models/vendor');
+const Category = require('../models/category');
 const response = require('../utils/response');
 
 const addNewInventoryItem = async (req, res) => {
   let product;
   try {
     const {
-      title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
+      title, metaTitle, sellingPrice, costPrice, discount,
+      quantity, longDescription, expiryDate, categoryId,
     } = req.body;
+    const { vendorId } = req.params;
+
+    const vendor = await Vendor.findByPk(vendorId);
+
+    if (!vendor) {
+      return res.status(response.BAD_REQUEST).json({
+        success: false, message: 'Could not create product', error: 'Vendor Error', data: {},
+      });
+    }
+
     product = await Product.create({
-      title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
+      title,
+      metaTitle,
+      sellingPrice,
+      costPrice,
+      discount,
+      quantity,
+      longDescription,
+      expiryDate,
+      VendorId: vendorId,
+
     });
+
     if (!product) {
       return res.status(response.BAD_REQUEST).json({
         success: false, message: 'Could not create product', error: 'Error', data: {},
       });
     }
+    await product.addCategory(categoryId);
+    await vendor.increment('totalProducts');
   } catch (err) {
     return res.status(response.INTERNAL_SERVER_ERROR).json({
-      success: false, message: 'Could not create product', error: err.mesage, data: {},
+      success: false, message: 'Could not create product', error: err.message, data: {},
     });
   }
   return res.status(response.CREATED).json({ success: true, message: 'Product Created', data: product });
@@ -25,8 +50,11 @@ const addNewInventoryItem = async (req, res) => {
 
 const deleteInventoryItem = async (req, res) => {
   try {
-    const { productId } = req.params;
-    await Product.destroy({ where: { id: productId } });
+    const { productId, vendorId } = req.params;
+    await Product.destroy({ where: { id: productId, VendorId: vendorId } });
+    const vendor = await Vendor.findByPk(vendorId);
+
+    await vendor.decrement('totalProducts');
   } catch (err) {
     return res.status(response.INTERNAL_SERVER_ERROR).json({
       success: false, message: 'Could not delete product', error: err.mesage, data: {},
@@ -38,8 +66,8 @@ const deleteInventoryItem = async (req, res) => {
 const getProductbyId = async (req, res) => {
   let product;
   try {
-    const { productId } = req.params;
-    product = await Product.findOne({ where: { id: productId } });
+    const { productId, vendorId } = req.params;
+    product = await Product.findOne({ where: { id: productId, VendorId: vendorId }, include: { model: Category, attributes: ['id', 'title'] } });
 
     if (!product) {
       return res.status(response.NOT_FOUND).json({
@@ -56,7 +84,7 @@ const getProductbyId = async (req, res) => {
 const getAllProducts = async (req, res) => {
   let products = [];
   try {
-    products = await Product.findAll();
+    products = await Product.findAll({ include: { model: Category, attributes: ['id', 'title'] } });
   } catch (err) {
     return res.status(response.INTERNAL_SERVER_ERROR).json({
       success: false, message: 'Error', error: err.mesage, data: {},
@@ -68,11 +96,12 @@ const getAllProducts = async (req, res) => {
 const modifyProduct = async (req, res) => {
   let modifiedProduct;
   try {
-    const { productId } = req.params;
+    const { productId, vendorId } = req.params;
+
     const {
       title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
     } = req.body;
-    const product = await Product.findByPk(productId);
+    const product = await Product.findOne({ where: { id: productId, VendorId: vendorId } });
 
     if (!product) {
       return res.status(response.NOT_FOUND).json({
@@ -81,7 +110,7 @@ const modifyProduct = async (req, res) => {
     }
     await Product.update({
       title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
-    }, { where: { id: productId } });
+    }, { where: { id: productId, VendorId: vendorId } });
 
     modifiedProduct = await Product.findByPk(productId);
   } catch (err) {
@@ -110,20 +139,33 @@ const bulkAdd = async (req, res) => {
     const {
       allProducts,
     } = req.body;
+    const { vendorId } = req.params;
+    const vendor = await Vendor.findByPk(vendorId);
 
     allProducts.map(async (item) => {
       const {
-        title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
+        title, metaTitle, sellingPrice, costPrice, discount, quantity,
+        longDescription, expiryDate, categoryId,
       } = item;
       // eslint-disable-next-line prefer-const
       let product = await Product.create({
-        title, metaTitle, sellingPrice, costPrice, discount, quantity, longDescription, expiryDate,
+        title,
+        metaTitle,
+        sellingPrice,
+        costPrice,
+        discount,
+        quantity,
+        longDescription,
+        expiryDate,
+        VendorId: vendorId,
       });
       if (!product) {
         return res.status(response.BAD_REQUEST).json({
           success: false, message: 'Could not create product', error: 'Error', data: {},
         });
       }
+      await product.addCategory(categoryId);
+      await vendor.increment('totalProducts');
       products.push(product);
     });
   } catch (err) {
@@ -137,12 +179,20 @@ const bulkAdd = async (req, res) => {
 const bulkDelete = async (req, res) => {
   try {
     const { products } = req.body;
+    const { vendorId } = req.params;
+    const vendor = await Vendor.findByPk(vendorId);
 
     const deleteItem = async (productId) => {
-      const deleted = await Product.destroy({ where: { id: Number(productId) } });
+      const deleted = await Product.destroy({
+        where: {
+          id: Number(productId),
+          VendorId: vendorId,
+        },
+      });
       if (deleted === 0) {
         throw new Error('Product Not Found');
       }
+      await vendor.decrement('totalProducts');
       return deleted;
     };
 
@@ -156,6 +206,18 @@ const bulkDelete = async (req, res) => {
   return res.status(response.OK).json({ success: true, message: 'Products Deleted', data: {} });
 };
 
+const getAllVendorProduct = async (req, res) => {
+  let products = [];
+  try {
+    const { vendorId } = req.params;
+    products = await Product.findAll({ where: { VendorId: vendorId }, include: { model: Category, attributes: ['id', 'title'] } });
+  } catch (err) {
+    return res.status(response.INTERNAL_SERVER_ERROR).json({
+      success: false, message: 'Error', error: err.mesage, data: {},
+    });
+  }
+  return res.status(response.OK).json({ success: true, message: 'Success', data: products });
+};
 module.exports = {
   addNewInventoryItem,
   deleteInventoryItem,
@@ -165,4 +227,5 @@ module.exports = {
   likeProduct,
   bulkAdd,
   bulkDelete,
+  getAllVendorProduct,
 };
